--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
  <h1>Welcome to the fith grader!</h1>
-<h2> test </h2>
-<h3>This is heading 3</h3> 
+
+
+<p>This is a paragraph.</p>
 
 <h6> I tryed to build this myself but oh well <h6>
