--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <h1> Welcome to the fifth grader! </h1>
 <body>
-<p>We are a podcast reporting on the newest drama and news at Ecspgh</p>
+<p>We are a podcast reporting on the newest drama and news at </p> <a href="https://ecspgh.org/" target="_blank">EcsPgh</a>
 </body> 
 <button type="button">Click Me!</button> 
