--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@
 <p>We are a podcast reporting on the newest drama and news at <a href="https://ecspgh.org/" target="_blank">EcsPgh</a> </p> 
 </body> 
 <button type="button">Click Me!</button> 
+<h6>Coded by technologysam </h6>
